--- a/basic/basic-layout-1.html
+++ b/basic/basic-layout-1.html
@@ -8,7 +8,35 @@
     <style>
       body {
         display: grid;
+        grid-template-areas: 
+        "header header" 
+        "aside main"
+        "footer footer";
+        grid-template-columns: 1fr 3fr;
+        grid-template-rows: 2fr 6fr 1fr;
+        padding: 1.25em;
+        gap: 1em;
       }
+
+      header {
+        grid-area: header;
+      }
+
+      nav {
+        grid-area: aside;
+      }
+
+      main {
+        grid-area: main;
+      }
+      
+      footer{
+
+        grid-area: footer;
+
+      }
+
+        
       /* Doe hier jouw ding! */
     </style>
   </head>
