--- a/basic/basic-layout-2.html
+++ b/basic/basic-layout-2.html
@@ -6,7 +6,33 @@
     <title>Basic Layout 2</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-      /* Doe hier jouw ding! */
+      body{
+        display: grid;
+        grid-template-areas: 
+        "header"
+        "nav"
+        "main"
+        "footer" ;
+        grid-template-columns: 1fr ;
+        grid-template-rows: 0.5fr 0.2fr 5fr 0.5fr;
+        gap: 1.25em;
+        padding: 1.25em 20em 1.25em 20em;
+      }
+      header {
+        grid-area: header;
+      }
+
+      nav {
+        grid-area: nav;
+      }
+
+      main {
+        grid-area: main;
+      }
+
+      footer {
+        grid-area: footer;
+      }
     </style>
   </head>
   <body id="basic-layout-2">
