--- a/basic/basic-layout-2.html
+++ b/basic/basic-layout-2.html
@@ -16,7 +16,7 @@
         grid-template-columns: 1fr ;
         grid-template-rows: 0.5fr 0.2fr 5fr 0.5fr;
         gap: 1.25em;
-        padding: 1.25em 20em 1.25em 20em;
+        padding: 1em;
       }
       header {
         grid-area: header;
