--- a/basic/basic-layout-3.html
+++ b/basic/basic-layout-3.html
@@ -6,7 +6,33 @@
     <title>Basic Layout 3</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-      /* Doe hier jouw ding! */
+       body{
+        display: grid;
+        grid-template-areas: 
+        "main main"
+        "footer footer"
+        "header nav" ;
+        grid-template-columns: 1fr 1fr ;
+        grid-template-rows: 10fr 2fr 2fr;
+        padding: 2em;
+        gap: 1em;
+      }
+
+      header{
+        grid-area: header;
+      }
+
+      nav{
+        grid-area: nav;
+      }
+
+      main{
+        grid-area: main;
+      }
+
+      footer{
+        grid-area: footer;
+      }
     </style>
   </head>
   <body id="basic-layout-3">
