--- a/basic/basic-layout-4.html
+++ b/basic/basic-layout-4.html
@@ -6,7 +6,16 @@
     <title>Basic Layout 4</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-      /* Doe hier jouw ding! */
+      body{
+        display: grid;
+        grid-template-areas: 
+        "main header"
+        "footer nav" ;
+        grid-template-columns: 4fr 1fr;
+        grid-template-rows: 1fr 1fr; 
+        gap: 1.25em;
+        padding: 1em;
+      }
     </style>
   </head>
   <body id="basic-layout-4">
